# jarida

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: callback.rs  cli.rs  common.rs  config.rs  db.rs  lib.rs  main.rs  security.rs  uuid.rs
