[package]
name = "jarida"
version = "0.1.1"
authors = ["Stephen Hunt <stphnhnt.git@gmail.com>"]
edition = "2018"
description = "A minimalist, encrypted journaling tool"
homepage = "https://gitlab.com/stphn/jarida"
repository = "https://gitlab.com/stphn/jarida"
license = "GPL-3.0-or-later"
keywords = ["journal"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2.0"
fs-err = "2.5"
log = "0.4"
once_cell = "1.5"
pretty_env_logger = "0.4"
ring = "0.16"
rpassword = "5.0"
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
tempfile = "3.2"
toml = "0.5"
