[package]
name = "jarida"
version = "0.1.1"
authors = ["Stephen Hunt <stphnhnt.git@gmail.com>"]
edition = "2021"
description = "A minimalist, encrypted journaling tool"
repository = "https://github.com/stphnt/jarida"
license = "GPL-3.0-or-later"
keywords = ["journal"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
dirs-next = "2.0"
fs-err = "2.7"
log = "0.4"
once_cell = "1.9"
pretty_env_logger = "0.4"
ring = "0.16.20"
rpassword = "5.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.3"
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing", "serde", "serde-well-known"] }
toml = "0.5"
